# exact_cover_problem

./: .gitignore  CMakeLists.txt  README.md  dancing_links.cpp  dancing_links.h  example.cpp  langford.cpp  run.sh  xc_run.sh  xcc_run.sh
.github/workflows/: cmake.yml  codeql-analysis.yml
apps/: CMakeLists.txt  common.h  example.cpp  langford.cpp  latin.cpp  nqueen.cpp  pentominoes.cpp  prime_square.cpp  sudoku.cpp  xc_example.cpp  xc_nqueen.cpp  xcc_example.cpp  xcc_nqueen.cpp
apps/common/: common.h
apps/xc/: example.cpp  langford.cpp  latin.cpp  nqueen.cpp  pentominoes.cpp  shikaku.cpp  sudoku.cpp
apps/xcc/: example.cpp  nqueen.cpp  pixel_cross.cpp  planar_langford.cpp  prime_square.cpp
data/shikaku/: 0.txt  1.txt  2.txt
data/sudoku/: 0.txt  1.txt  2.txt
logs/: amd-ryzen-7-3700X  intel-core-i7-8565U
logs/amd-ryzen-7-3700X/: xc_log  xcc_log
src/: CMakeLists.txt
src/solver/: dancing_links.cpp  dancing_links.h  job_queue.h  option_handler.cpp  option_handler.h
tests/: CMakeLists.txt  test_xc.cpp  xc_test.cpp  xcc_test.cpp
