foreach(exe example langford latin nqueen pentominoes sudoku)
    add_executable(xc_${exe} xc/${exe}.cpp)
    target_link_libraries(xc_${exe} PRIVATE solver)
    target_include_directories(xc_${exe} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endforeach()

foreach(exe example nqueen pixel_cross planar_langford prime_square)
    add_executable(xcc_${exe} xcc/${exe}.cpp)
    target_link_libraries(xcc_${exe} PRIVATE solver)
    target_include_directories(xcc_${exe} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endforeach()
